# rust_template

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
